# Ubuntu-Configuration-Template

./: .gitignore  README.md  main.py  main.sh  menu.py  options.conf  pyproject.toml
core/: install.sh  main.sh  options.conf  ping.sh  utils.sh
core/configurations/: .p10k.zsh
scripts/: install.sh  ping.sh  utils.sh
src/: menu.py
src/configurations/: .p10k.zsh  .zshrc  kitty.conf  utc.conf
