[tool.poetry]
name = "ubuntu-configuration-template"
version = "0.1.0"
description = "A Simple configuration tool for ubuntu"
authors = ["ahMAD ASSadi <ds1380ahmad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
termcolor = "^2.5.0"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
